# highlight

./: .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  browser.js  build.ts  bump-version.ts  bun.lockb  go.mod  go.sum  highlight.go  highlight.test.ts  highlight.ts  highlight_test.go  index.d.ts  index.js  index.ts  jsr.json  main.ts  package.json  theme.toml  tsconfig.json
.github/workflows/: build-wasm.yml  build.yml
highlighting/: highlight.go
highlights/: bash.scm  c-sharp.scm  cpp.scm  flow.scm  go.scm  java.scm  javascript.scm  php.scm  python.scm  ruby.scm  rust.scm  scala.scm  typescript.scm
language/: get-language.go  language.go
npm/wasm32-wasi/: README.md  package.json
patches/: tree-sitter-bash@0.23.3.patch  tree-sitter-c@0.23.4.patch  tree-sitter-css@0.23.1.patch  tree-sitter-go@0.23.4.patch  tree-sitter-html@0.23.2.patch  tree-sitter-java@0.23.4.patch  tree-sitter-java@0.23.5.patch  tree-sitter-javascript@0.23.1.patch  tree-sitter-ocaml@0.23.2.patch  tree-sitter-php@0.23.11.patch  tree-sitter-python@0.23.5.patch  tree-sitter-ruby@0.23.1.patch  tree-sitter-rust@0.23.2.patch  tree-sitter-scala@0.23.3.patch
scripts/: build-queries.ts
src/: corrections.ts  highlight.rs  highlight.ts  languages.ts  lib.rs  main.rs  types.rs  types.ts
theme/: theme.go
