[package]
name = "highlight"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.13" }
napi-derive = "2.16.13"
tree-sitter-bash = "0.23.3"
tree-sitter-c = "0.23.4"
tree-sitter-cpp = "0.23.4"
tree-sitter-css = "0.23.1"
tree-sitter-embedded-template = "0.23.2"
tree-sitter-go = "0.23.4"
tree-sitter-haskell = "0.23.1"
tree-sitter-highlight = "0.24.6"
tree-sitter-html = "0.23.2"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.23.1"
tree-sitter-jsdoc = "0.23.2"
tree-sitter-json = "0.24.8"
tree-sitter-ocaml = "0.23.2"
tree-sitter-php = "0.23.11"
tree-sitter-python = "0.23.6"
tree-sitter-ql = "0.23.1"
tree-sitter-regex = "0.24.3"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.23.2"
tree-sitter-scala = "0.23.4"
tree-sitter-typescript = "0.23.2"

[build-dependencies]
napi-build = "2.1.4"

[profile.release]
lto = true
strip = "symbols"
