[package]
name = "highlight"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.13" }
napi-derive = "2.16.13"
tree-sitter-arduino = "0.23.0"
tree-sitter-bash = "0.23.3"
tree-sitter-bicep = "1.1.0"
tree-sitter-c = "0.23.4"
tree-sitter-cpp = "0.23.4"
tree-sitter-css = "0.23.1"
tree-sitter-diff = "0.1.0"
tree-sitter-elixir = "0.3.3"
tree-sitter-embedded-template = "0.23.2"
tree-sitter-fsharp = "0.1.0"
tree-sitter-go = "0.23.4"
tree-sitter-haskell = "0.23.1"
tree-sitter-highlight = "0.24.6"
tree-sitter-html = "0.23.2"
tree-sitter-hygen-template = "0.3.2"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.23.1"
tree-sitter-jsdoc = "0.23.2"
tree-sitter-json = "0.24.8"
tree-sitter-kconfig = "1.3.0"
tree-sitter-kotlin-sg = "0.4.0"
tree-sitter-lua = "0.2.0"
tree-sitter-luau = "1.2.0"
tree-sitter-make = "1.1.1"
tree-sitter-objc = "3.0.2"
tree-sitter-ocaml = "0.23.2"
tree-sitter-odin = "1.3.0"
tree-sitter-php = "0.23.11"
tree-sitter-printf = "0.4.0"
tree-sitter-puppet = "1.3.0"
tree-sitter-python = "0.23.6"
tree-sitter-ql = "0.23.1"
tree-sitter-r = "1.1.0"
tree-sitter-regex = "0.24.3"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.23.2"
tree-sitter-scala = "0.23.4"
tree-sitter-sequel = "0.3.7"
tree-sitter-solidity = "1.2.10"
tree-sitter-starlark = "1.3.0"
tree-sitter-svelte-ng = "1.0.2"
tree-sitter-swift = "0.6.0"
tree-sitter-t32 = "5.0.2"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-xml = "0.7.0"
tree-sitter-yaml = "0.7.0"
tree-sitter-zig = "1.1.2"

[build-dependencies]
napi-build = "2.1.4"

[profile.release]
lto = true
strip = "symbols"
