[package]
name = "highlight"
version = { workspace = true }
edition = { workspace = true }

[workspace]
members = ["bin/"]

[workspace.package]
version = "0.6.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
serde = { version = "1.0.218", features = ["derive"]}
toml = "0.8.20"
tree-sitter-agda = "1.3.3"
tree-sitter-bash = "0.23.3"
tree-sitter-c = "0.23.4"
tree-sitter-cpp = "0.23.4"
tree-sitter-css = "0.23.2"
tree-sitter-go = "0.23.4"
tree-sitter-haskell = "0.23.1"
tree-sitter-highlight = "0.25.2"
tree-sitter-html = "0.23.2"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.23.1"
tree-sitter-jsdoc = "0.23.2"
tree-sitter-json = "0.24.8"
tree-sitter-ocaml = "0.24.0"
tree-sitter-php = "0.23.11"
tree-sitter-python = "0.23.6"
tree-sitter-regex = "0.24.3"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.23.2"
tree-sitter-scala = "0.23.4"
tree-sitter-typescript = "0.23.2"

[profile.release]
lto = true
